Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -43,6 +43,7 @@
 
   .search-results-scroll {
     @media (max-width: $screen-xs-max) {
+      height: 100%;
       overflow-y: scroll; /* has to be scroll, not auto */
       -webkit-overflow-scrolling: touch;
     }
